--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,7 @@ bold 800
 
 :root {
     --clr-primary: #ffffff;
+    --clr-primary-shade: #f9f6f6;
     --clr-secondary: #363636;
     --clr-accent: #0084ff;
     --clr-border: #cccccc;
@@ -81,6 +82,9 @@ body {
 .bg-primary {
     background-color: var(--clr-primary);
 }
+.bg-primary-shade {
+    background-color: var(--clr-primary-shade);
+}
 .bg-secondary {
     background-color: var(--clr-secondary);
 }
@@ -97,9 +101,8 @@ body {
     margin: 0px auto;
     padding: 4rem 1rem;
     max-width: 62.5rem;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
-
 
 /* 
     --------------
@@ -147,11 +150,110 @@ body {
 
 /* 
     ------------------
-    contact
+    hero
     ------------------
 */
 
 
+.hero-section {
+    justify-content: space-between;
+    align-items: center;
+}
+
+.hero-main-heading {
+    font-size: var(--fs-heading);
+    font-weight: var(--fw-800);
+}
+
+
+/* 
+    ------------------
+    project
+    ------------------
+*/
+
+.projects-text {
+    color: var(--clr-accent);
+    font-weight: var(--fw-800);
+    font-size: var(--fs-subheading);
+    padding-bottom: 20px;
+}
+
+.project-card {
+    background-color: var(--clr-primary);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+    border-radius: 10px;
+}
+
+.project-card-grid {
+    column-gap: 10px;
+}
+
+.project-card img {
+    width: 100%;
+    padding: 10px;
+}
+  
+.project-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+  
+.card-container {
+    padding: 2px 16px;
+}
+
+/* 
+    ------------------
+    contact
+    ------------------
+*/
+
+#contact p {
+    color: var(--clr-accent);
+    font-weight: var(--fw-800);
+    font-size: var(--fs-subheading);
+}
+
+.contact {
+    column-gap: 1em;
+    padding-top: 20px;
+}
+
+.contact-mail {
+    column-gap: 1em;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-location {
+    column-gap: 1em;
+}
+
+.contact-logo {
+    font-size: var(--fs-subheading);
+    height: 2.5em;
+    width: 2.5em;
+    border-radius: 50%;
+    border: 1px solid var(--clr-border);
+    box-shadow: 0px 0px 10px 0px var(--clr-border);
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-text {
+    font-size: var(--fs-content);
+    font-weight: var(--fw-800);
+}
+
+.fa-envelope {
+    color: var(--clr-accent);
+}
+
+.fa-map-marker {
+    color: var(--clr-accent);
+}
 /* 
     -------------------
     Footer
