--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,7 @@ bold 800
     --fw-800: 800;
 
     --fs-body: 16px;
-    --fs-heading: 2em;
+    --fs-heading: 3em;
     --fs-subheading: 1.5em;
     --fs-content: 1em;
 
@@ -111,6 +111,9 @@ body {
 */
 
 .header-home {
+    background-color: var(--clr-primary);
+    position: sticky;
+    top: 0px;
     border-bottom: 1px solid var(--clr-border);
     padding: 10px 40px;
     box-shadow: 0px 0px 10px 0px var(--clr-border);
@@ -122,6 +125,7 @@ body {
 }
 
 .navbar-logo {
+    cursor: pointer;
     color: var(--clr-secondary);
     font-weight: var(--fw-800);
     font-size: var(--fs-subheading);
@@ -163,9 +167,68 @@ body {
 .hero-main-heading {
     font-size: var(--fs-heading);
     font-weight: var(--fw-800);
+    color: var(--clr-secondary);
 }
 
+.hero-section-text {
+    flex-direction: column;
+    row-gap: 20px;
+    justify-content: space-around;
+}
 
+.hero-section-skills {
+    column-gap: 10px;
+}
+
+.skills-text {
+    font-weight: var(--fw-800);
+    font-size: var(--fs-subheading);
+    color: var(--clr-secondary);
+}
+
+.skills-logo {
+    cursor: pointer;
+    font-size: var(--fs-subheading);
+    height: 2.5em;
+    width: 2.5em;
+    border-radius: 50%;
+    border: 1px solid var(--clr-border);
+    box-shadow: 0px 0px 10px 0px var(--clr-border);
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-section-skills img{
+    height: 30px;
+    width: 30px;
+}
+/* 
+    ------------------
+    About me
+    ------------------
+*/
+
+.about-me-text {
+    color: var(--clr-accent);
+    font-weight: var(--fw-800);
+    font-size: var(--fs-subheading);
+    padding-bottom: 20px;
+}
+
+.aboutme-card {
+    background-color: var(--clr-primary);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 100%;
+    border-radius: 10px;    
+}
+
+.aboutme-card-image img {
+    width: 50%;
+    border: 1px solid red;
+    border-radius: 10px;
+    padding: 10px;
+}
 /* 
     ------------------
     project
@@ -183,12 +246,12 @@ body {
     background-color: var(--clr-primary);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 40%;
+    width: 30%;
     border-radius: 10px;
 }
 
 .project-card-grid {
-    column-gap: 10px;
+    column-gap: 20px;
 }
 
 .project-card img {
