--- a/styles/style.css
+++ b/styles/style.css
@@ -212,6 +212,15 @@ body {
     height: 30px;
     width: 30px;
 }
+
+.hero-banner-container {
+    display: contents;
+}
+
+.hero-banner-image {
+    height: auto;
+    width: 50%;
+}
 /* 
     ------------------
     About me
@@ -348,6 +357,34 @@ body {
 */
 
 @media screen and (max-width: 600px) {
+    /* Header */
+    .header-home {
+        background-color: var(--clr-primary);
+        position: sticky;
+        top: 0px;
+        border-bottom: 1px solid var(--clr-border);
+        padding: 1rem 1rem;
+        box-shadow: 0px 0px 10px 0px var(--clr-border);
+    }
+
+    .navbar-list {
+        display: none;
+    }
+
+    /* Hero Banner */
+
+    .hero-section {
+        flex-direction: column-reverse;
+    }
+
+    .hero-banner-image {
+        border: 5px solid var(--clr-secondary);
+        border-radius: 50%;
+        background-color: var(--clr-accent);
+    }
+
+    /* Contact Section */
+
     .contact {
         flex-direction: column;
         row-gap: 20px;
@@ -357,18 +394,6 @@ body {
         justify-content: flex-start;
     }
 
-    .navbar-list {
-        display: none;
-    }
-
-    .header-home {
-        background-color: var(--clr-primary);
-        position: sticky;
-        top: 0px;
-        border-bottom: 1px solid var(--clr-border);
-        padding: 1rem 1rem;
-        box-shadow: 0px 0px 10px 0px var(--clr-border);
-    }
 }
 
 @media screen and (min-width: 600px) {
