--- a/styles/style.css
+++ b/styles/style.css
@@ -118,6 +118,7 @@ body {
     border-bottom: 1px solid var(--clr-border);
     padding: .625em 2.5em;
     box-shadow: 0px 0px 10px 0px var(--clr-border);
+    z-index: 2;
 }
 
 .navbar {
@@ -243,10 +244,13 @@ body {
 }
 
 .aboutme-card-text {
-    line-height: 1.8;
-    text-align: justify;
+    /* line-height: 1.8; */
+    /* text-align: justify; */
+    font-size: .9rem;
     padding-right: 20px;
     width: 50%;
+    font-weight: 600;
+    color: rgba(0,0,0,0.7);
 }
 
 .aboutme-card-image {
@@ -278,6 +282,12 @@ body {
     transition: 0.3s;
     width: 30%;
     border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.project-card p {
+    font-size: 0.8rem;
 }
 
 .project-card-grid {
@@ -296,6 +306,27 @@ body {
   
 .card-container {
     padding: 2px 16px;
+}
+
+.card-overlay {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    background-color: rgba(255,255,255,0.5);
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+    transition: 0.5s ease-in-out;
+}
+.project-card:hover .card-overlay {
+    height: 100%;
+}
+.card-overlay h2 {
+    /* margin: 0 10px; */
+    padding: 0 15px;
 }
 
 /* 
